- Optimized chunk sizes for different chains (ETH: 10, PLS: 50)
- Increased maximum transaction limit to 1000
- Changed default chain to ETH in pls-sac-addresses page
- Added detailed console logging for transaction processing
- Added chain identifier to all console messages
- Improved loading skeleton UI to match OA Stakes table
- Added transaction details to console logs
- Added progress tracking for block processing
- Optimized transaction scanning for addresses with few transactions
- Added initial transaction count check to avoid unnecessary scanning
- Implemented progressive block range expansion
- Reduced initial scan range to 10,000 blocks
- Added early exit when no transactions are found
- Improved block processing efficiency by scanning one block at a time
- Added smart backtracking to find older transactions 

## [2024-03-21] - Etherscan API Integration
- Switched to using Etherscan/Pulsescan APIs for transaction fetching
- Added support for normal, internal, and ERC20 transactions
- Improved transaction type display with colored badges
- Added proper value formatting for different token decimals
- Added failed transaction indication with reduced opacity
- Added parallel fetching of different transaction types
- Added sorting by timestamp for all transaction types
- Updated transaction interface to match Etherscan API response
- Added environment variable support for API keys
- Improved error handling and loading states
- Added visual indicators for transaction types (Normal/Internal/ERC20) 

## [2024-03-27]
- Renamed `PooledStakes` component to `LoginTable` in components/login-page/pooled-stakes/login-table.tsx to match the file name
- Updated imports and exports in index.ts and pages/index.tsx to use the renamed `LoginTable` component
- Modified SphereLayout to start with a random sphere instead of always starting with MAXI
- Restored sphere-2 directory with individual sphere components (MAXI, DECI, LUCKY, TRIO, BASE) and their specific configurations 